--- a/Assignments/JS/SPA/index.html
+++ b/Assignments/JS/SPA/index.html
@@ -392,6 +392,7 @@
     </div>
 </main>
 
+<script src="assets/bootstrap/js/jquery-3.7.1.min.js"></script>
 <script>
     let dash = document.querySelector("#dashboardContent");
     let customer = document.querySelector("#customerContent");
@@ -459,39 +460,40 @@
     let customers = new Array();
 
 
-    ad_cus_btn.addEventListener("click",function () {
-       var customer = {
-           id:txtCustomerID.value,
-           name:txtCustomerName.value,
-           addres:txtCustomerAdress.value
-       }
-        customers.push(customer);
-       console.log(customers);
-    })
+    // ad_cus_btn.addEventListener("click",function () {
+    //    var customer = {
+    //        id:txtCustomerID.value,
+    //        name:txtCustomerName.value,
+    //        addres:txtCustomerAdress.value
+    //    }
+    //     customers.push(customer);
+    //    console.log(customers);
+    // })
+    //
+    // document.querySelector("#CusbtnGetAll").addEventListener("click", function () {
+    //
+    //     for(let i=0; i<customers.length; i++) {
+    //
+    //         let tBody = document.querySelector("#tblCustomer");
+    //
+    //         let tr = document.createElement("tr");
+    //
+    //         let col1 = document.createElement("td");
+    //         let col2 = document.createElement("td");
+    //         let col3 = document.createElement("td");
+    //
+    //
+    //         col1.textContent = customers[i].id;
+    //         col2.textContent = customers[i].name;
+    //         col3.textContent = customers[i].addres;
+    //
+    //         tr.append(col1,col2,col3);
+    //
+    //         tBody.append(tr);
+    //     }
+    // });
 
-    document.querySelector("#CusbtnGetAll").addEventListener("click", function () {
-
-        alert('hh');
-        for(let i=0; i<customers.length; i++) {
-
-            let tBody = document.querySelector("#tblCustomer");
-
-            let tr = document.createElement("tr");
-
-            let col1 = document.createElement("td");
-            let col2 = document.createElement("td");
-            let col3 = document.createElement("td");
-
-
-            col1.textContent = customers[i].id;
-            col2.textContent = customers[i].name;
-            col3.textContent = customers[i].addres;
-
-            tr.append(col1,col2,col3);
-
-            tBody.append(tr);
-        }
-    });
+    
 </script>
 </body>
 </html>
