--- a/index.html
+++ b/index.html
@@ -19,92 +19,94 @@
     />
     <style>
 
-        @media all and (max-width: 320px) {
-            header{
-                background-color: snow;
-                height: 50px;
 
-                top: 0;
-                width: 100vw;
-                position: fixed;
-                z-index: 3;
-            }
-            header>img{
-                width: 10%;
-                margin: 7px;
-                transition-duration: 2s;
-                transition-property: all;
-            }
-            header>nav>ul>li>a{
-                width: 2vw;
-            }
-            header>nav>ul>li>a:hover {
-                width: 3vw;
-                filter: drop-shadow(0 0 1vw black);
-            }
-            header>nav>ul>li {
-                display: inline;
-                margin-right: 20px;
-            }
-            header>nav>ul>li>a{
-                width: 2vw;
-                text-decoration: none;
-                color: #0C1154;
-            }
-            header>nav>ul{
-                position: absolute;
-                top: 5px;
-                right: 25px
-            }
+        /*@media all and (max-width: 320px) {*/
+        /*    header{*/
+        /*        background-color: snow;*/
+        /*        height: 50px;*/
 
-            /*Home ............*/
+        /*        top: 0;*/
+        /*        width: 100vw;*/
+        /*        position: fixed;*/
+        /*        z-index: 3;*/
+        /*    }*/
+        /*    header>img{*/
+        /*        width: 10%;*/
+        /*        margin: 7px;*/
+        /*        transition-duration: 2s;*/
+        /*        transition-property: all;*/
+        /*    }*/
+        /*    header>nav>ul>li>a{*/
+        /*        width: 2vw;*/
+        /*    }*/
+        /*    header>nav>ul>li>a:hover {*/
+        /*        width: 3vw;*/
+        /*        filter: drop-shadow(0 0 1vw black);*/
+        /*    }*/
+        /*    header>nav>ul>li {*/
+        /*        display: inline;*/
+        /*        margin-right: 20px;*/
+        /*    }*/
+        /*    header>nav>ul>li>a{*/
+        /*        width: 2vw;*/
+        /*        text-decoration: none;*/
+        /*        color: #0C1154;*/
+        /*    }*/
+        /*    header>nav>ul{*/
+        /*        position: absolute;*/
+        /*        top: 5px;*/
+        /*        right: 25px*/
+        /*    }*/
 
-            #section01{
-                display: flex;
-                right: 0;
-                left: 0;
-                position: relative;
-                width: 100vw;
-                height: 40vh;
-            }
-            body>section:nth-child(2)>section:nth-child(1){
-                display: none;
-                width: 60vw;
-            }
-            body>section:nth-child(2)>div:nth-child(2){
-                width: 40vw;
-            }
-            body>section:nth-child(2)>div:nth-child(2)>img{
-                position: relative;
-                width: 52vw;
-                right: 10vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>h1{
-                display: flex;
-                justify-content: left;
-                margin-left: 10vw;
-                margin-top: 10vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>h2:nth-child(2){
-                display: flex;
-                justify-content: left;
-                margin-left: 10vw;
-                margin-top: 3vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3){
-                display: flex;
-                justify-content: left;
-                margin-left: 10vw;
-                margin-top: 3vw;
-                flex-direction: row;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>img:nth-child(4){
-                display: flex;
-                justify-content: left;
-                margin-top: -10vw;
-            }
+        /*    !*Home ............*!*/
 
-        }
+        /*    #section01{*/
+        /*        display: flex;*/
+        /*        right: 0;*/
+        /*        left: 0;*/
+        /*        position: relative;*/
+        /*        width: 100vw;*/
+        /*        height: 40vh;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>section:nth-child(1){*/
+        /*        display: none;*/
+        /*        width: 60vw;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>div:nth-child(2){*/
+        /*        width: 40vw;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>div:nth-child(2)>img{*/
+        /*        position: relative;*/
+        /*        width: 52vw;*/
+        /*        right: 10vw;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>section:nth-child(1)>h1{*/
+        /*        display: flex;*/
+        /*        justify-content: left;*/
+        /*        margin-left: 10vw;*/
+        /*        margin-top: 10vw;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>section:nth-child(1)>h2:nth-child(2){*/
+        /*        display: flex;*/
+        /*        justify-content: left;*/
+        /*        margin-left: 10vw;*/
+        /*        margin-top: 3vw;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3){*/
+        /*        display: flex;*/
+        /*        justify-content: left;*/
+        /*        margin-left: 10vw;*/
+        /*        margin-top: 3vw;*/
+        /*        flex-direction: row;*/
+        /*    }*/
+        /*    body>section:nth-child(2)>section:nth-child(1)>img:nth-child(4){*/
+        /*        display: flex;*/
+        /*        justify-content: left;*/
+        /*        margin-top: -10vw;*/
+        /*    }*/
+
+        /*}*/
+
 </style>
 
 </head>
@@ -299,22 +301,22 @@
 
 <section id="section05">
     <img id="gallery" src="assets/images/gallery.png">
-    <section>
+    <div>
         <img src="assets/images/poto1.png">
 
         <img src="assets/images/poto2.png">
 
         <img src="assets/images/poto3.png">
-    </section>
+    </div>
 
-    <section>
+    <div>
         <img src="assets/images/poto4.png">
 
         <img src="assets/images/poto5.png">
 
         <img src="assets/images/poto6.png">
 
-    </section>
+    </div>
 
 </section>
 
