--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 
         @media all and (max-width: 320px) {
+            #section02,#section03,#section4,#section05,#section06,#section07{
+                display: none;
+            }
+            footer{
+                display: none;
+            }
             header{
                 background-color: snow;
                 height: 50px;
