--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
         @media all and (max-width: 320px) {
-            #section02,#section03,#section4,#section05,#section06,#section07{
+            #section03,#section4,#section05,#section06,#section07{
                 display: none;
             }
             footer{
@@ -105,6 +105,43 @@
                 display: none;
             }
 
+            /*About................*/
+            #whoHeader{
+                left: 20vw;
+                bottom: 145vw;
+                position: relative;
+                width: 34vw;
+            }
+
+            body>section:nth-child(3)>img:nth-child(1){
+                left: 14vw;
+                position: relative;
+                width: 57vw;
+            }
+            body>section:nth-child(3)>section:nth-child(2){
+                top: 92vw;
+                position: relative;
+                width: 100vw;
+                right: 71vw;
+            }
+            body>section:nth-child(3)>section:nth-child(2)>pre:nth-child(1){
+                font-size: 3vw;
+                top: 52vw;
+                left: 6vw;
+                position: relative;
+                font-family: Roboto Serif
+            }
+            #section02{
+                right: 0;
+                left: 0;
+                position: relative;
+                width: 100vw;
+                height: 146vh;
+            }
+            #cv{
+                width: 33vw;
+            }
+
         }
 
 </style>
@@ -166,7 +203,6 @@
                 and currently completing my Second semester. I like to improve my
 
                 skills working with projects.
-
 
                 Im very passionate and dedicated to my work. An easy going person with a
 
