--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
         @media all and (max-width: 320px) {
-            #section4,#section05,#section06,#section07{
+            #section05,#section06,#section07{
                 display: none;
             }
             footer{
@@ -157,17 +157,18 @@
             #div01{
                 width: 98vw;
             }
+            #div02{
+                justify-content: center;
+                margin-top:0px;
+            }
             #div03{
+                top: 0vw;
                 position: relative;
                 right: 18vw;
                 width: 98vw;
-            }
-            body>section:nth-child(4)>div:nth-child(5){
-                position: relative;
-                top: 50px;
                 justify-content: start;
-
             }
+
             body>section:nth-child(4)>img:nth-child(1) {
                 top: 74vw;
                 position: relative;
@@ -191,6 +192,24 @@
 
             body>section:nth-child(4)>img:nth-child(6) {
                 display: none;
+            }
+
+            /*Skills...*/
+            #section4{
+                position: relative;
+                width: 100vw;
+                height: 72vh;
+            }
+            #mySkill {
+                position: relative;
+                left: 0vw;
+            }
+            body>section:nth-child(5)>section:nth-child(2) {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                margin-top: 12vw;
+                flex-wrap: wrap;
             }
         }
 
