--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
         @media all and (max-width: 320px) {
-           #section06,#section07{
+           #section07{
                 display: none;
             }
             footer{
@@ -224,6 +224,19 @@
                 height: 30vw;
                 filter: grayscale(80%);
                 transition: 0.5s;
+            }
+
+            body>section:nth-child(7)>section:nth-child(2) {
+                margin-top: 5vw;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+            body>section:nth-child(7)>img:nth-child(1) {
+                width: 75vw;
+                top: 5vw;
+                position: relative;
+                 left: 0vw;
             }
         }
 
