--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 
 
         @media all and (max-width: 320px) {
-           #section07{
-                display: none;
-            }
             footer{
                 display: none;
             }
@@ -226,6 +223,13 @@
                 transition: 0.5s;
             }
 
+            #section06{
+                position: relative;
+                left: 0;
+                right: 0;
+                width: 100vw;
+                height: 265vh;
+            }
             body>section:nth-child(7)>section:nth-child(2) {
                 margin-top: 5vw;
                 display: flex;
@@ -237,6 +241,24 @@
                 top: 5vw;
                 position: relative;
                  left: 0vw;
+            }
+            #section07 {
+                position: relative;
+                left: 0;
+                right: 0;
+                height: 122vh;
+                width: 100vw;
+                display: flex;
+            }
+            #btnSubmit {
+                position: relative;
+                left: 3vw;
+                width: 47vw;
+                height: 10vh;
+                border-radius: 20px;
+                background-color: #0C1154;
+                color: #aacccc;
+                font-weight: bolder;
             }
         }
 
