--- a/index.html
+++ b/index.html
@@ -12,255 +12,13 @@
     <meta name="theme-colour" content="red">
     <meta name ="robots" content="index,follow">
     <link rel="stylesheet" href="css/myPortfolio.css">
+    <link rel="stylesheet" href="css/mobileSize.css">
     <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <style>
-
-
-        @media all and (max-width: 320px) {
-            footer{
-                display: none;
-            }
-            header{
-                background-color: snow;
-                height: 50px;
-
-                top: 0;
-                width: 100vw;
-                position: fixed;
-                z-index: 3;
-            }
-            header>img{
-                width: 10%;
-                margin: 7px;
-                transition-duration: 2s;
-                transition-property: all;
-            }
-            header>nav>ul>li>a{
-                width: 2vw;
-            }
-            header>nav>ul>li>a:hover {
-                width: 3vw;
-                filter: drop-shadow(0 0 1vw black);
-            }
-            header>nav>ul>li {
-                display: inline;
-                margin-right: 20px;
-            }
-            header>nav>ul>li>a{
-                width: 2vw;
-                text-decoration: none;
-                color: #0C1154;
-            }
-            header>nav>ul{
-                position: absolute;
-                top: 5px;
-                right: 25px
-            }
-
-            /*Home ............*/
-            #section01{
-                right: 0;
-                left: 0;
-                position: relative;
-                width: 100vw;
-                height: 100vh;
-            }
-            body>section:nth-child(2)>section:nth-child(1){
-                width: 60vw;
-            }
-            body>section:nth-child(2)>div:nth-child(2){
-                position: relative;
-                right: 31vw;
-            }
-            body>section:nth-child(2)>div:nth-child(2)>img{
-                right: 17vw;
-                top: 15vw;
-                position: relative;
-                width: 67vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>h1{
-                width: 72vw;
-                font-size: 5vw;
-                justify-content: left;
-                margin-left: 10vw;
-                margin-top: 93vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>h2:nth-child(2){
-                margin-left: 10vw;
-                margin-top: 3vw;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3){
-                margin-left: 10vw;
-                margin-top: 3vw;
-                flex-direction: row;
-            }
-            body>section:nth-child(2)>section:nth-child(1)>img:nth-child(4){
-                display: none;
-            }
-
-            /*About................*/
-            #whoHeader{
-                left: 20vw;
-                bottom: 145vw;
-                position: relative;
-                width: 34vw;
-            }
-
-            body>section:nth-child(3)>img:nth-child(1){
-                left: 14vw;
-                position: relative;
-                width: 57vw;
-            }
-            body>section:nth-child(3)>section:nth-child(2){
-                top: 92vw;
-                position: relative;
-                width: 100vw;
-                right: 71vw;
-            }
-            body>section:nth-child(3)>section:nth-child(2)>pre:nth-child(1){
-                font-size: 3vw;
-                top: 52vw;
-                left: 6vw;
-                position: relative;
-                font-family: Roboto Serif
-            }
-            #section02{
-                right: 0;
-                left: 0;
-                position: relative;
-                width: 100vw;
-                height: 146vh;
-            }
-            #cv{
-                width: 33vw;
-            }
-
-            /*Education.....*/
-
-            #section03{
-                flex-direction: column;
-                display: flex;
-            }
-            .box{
-                display: flex;
-                flex-wrap: wrap;
-                align-content: stretch;
-                align-items: stretch;
-            }
-            #div01{
-                width: 98vw;
-            }
-            #div02{
-                justify-content: center;
-                margin-top:0px;
-            }
-            #div03{
-                top: 0vw;
-                position: relative;
-                right: 18vw;
-                width: 98vw;
-                justify-content: start;
-            }
-
-            body>section:nth-child(4)>img:nth-child(1) {
-                top: 74vw;
-                position: relative;
-                width: 30vw;
-            }
-            body>section:nth-child(4)>img:nth-child(2) {
-                right: 14vw;
-                position: relative;
-                width: 64vw;
-            }
-            body>section:nth-child(4)>div:nth-child(3)>img {
-                right: 21vw;
-                position: relative;
-                border-radius: 20px;
-            }
-            body>section:nth-child(4)>div:nth-child(5)>img {
-                left: 25vw;
-                position: relative;
-                border-radius: 20px;
-            }
-
-            body>section:nth-child(4)>img:nth-child(6) {
-                display: none;
-            }
-
-            /*Skills...*/
-            #section4{
-                position: relative;
-                width: 100vw;
-                height: 72vh;
-            }
-            #mySkill {
-                position: relative;
-                left: 0vw;
-            }
-            body>section:nth-child(5)>section:nth-child(2) {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-top: 12vw;
-                flex-wrap: wrap;
-            }
-
-            #section05{
-                position: relative;
-                right: 0;
-                left: 0;
-                width: 100vw;
-                margin: auto;
-                height: 50vh;
-            }
-            #section05>div>img {
-                height: 30vw;
-                filter: grayscale(80%);
-                transition: 0.5s;
-            }
-
-            #section06{
-                position: relative;
-                left: 0;
-                right: 0;
-                width: 100vw;
-                height: 265vh;
-            }
-            body>section:nth-child(7)>section:nth-child(2) {
-                margin-top: 5vw;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-            }
-            body>section:nth-child(7)>img:nth-child(1) {
-                width: 75vw;
-                top: 5vw;
-                position: relative;
-                 left: 0vw;
-            }
-            #section07 {
-                position: relative;
-                left: 0;
-                right: 0;
-                height: 122vh;
-                width: 100vw;
-                display: flex;
-            }
-            #btnSubmit {
-                position: relative;
-                left: 3vw;
-                width: 47vw;
-                height: 10vh;
-                border-radius: 20px;
-                background-color: #0C1154;
-                color: #aacccc;
-                font-weight: bolder;
-            }
-        }
 
 </style>
 
