--- a/Assingment.html
+++ b/Assingment.html
@@ -688,10 +688,57 @@
 
                 <div>
                     <h4> My Project About</h4>
-                    <p>01. Css grid layout<br>
+                    <p>01. using JS<br>
                         02. using image </p>
-                    <a href="Assignments/CSS/animation/case4/index.html" target="_blank">Assignments 14</a>
+                    <a href="Assignments/JS/Que/index.html" target="_blank">Assignments 15</a>
 
+                    <h4>Technologies</h4>
+                </div>
+            </section>
+
+            <section>
+                <aside>
+                    <h3>Assignment 16</h3>
+                    <img src="assets/images/A16.png">
+                </aside>
+
+                <div>
+                    <h4> My Project About</h4>
+                    <p>01. Using JS<br>
+                        02.Using Jquery</p>
+                    <a href="Assignments/JS/calculator/index.html" target="_blank">Assignments 16</a>
+                    <h4>Technologies</h4>
+                </div>
+            </section>
+        </section>
+
+        <section class="class1">
+            <section>
+                <aside>
+                    <h3>Assignment 17</h3>
+                    <img src="assets/images/A17.png">
+                </aside>
+
+                <div>
+                    <h4> My Project About</h4>
+                    <p>01. using JS<br>
+                        02. using Jquery </p>
+                    <a href="Assignments/JS/Knight-Rider/index.html" target="_blank">Assignments 17</a>
+                    <h4>Technologies</h4>
+                </div>
+            </section>
+
+            <section>
+                <aside>
+                    <h3>Assignment 18</h3>
+                    <img src="assets/images/A18.png">
+                </aside>
+
+                <div>
+                    <h4> My Project About</h4>
+                    <p>01. Using JS<br>
+                        02.Using Jquery</p>
+                    <a href="Assignments/JS/SPA/index.html" target="_blank">Assignments 18</a>
                     <h4>Technologies</h4>
                 </div>
             </section>
