meta data update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Dilshan Sandaruwan">
     <meta name="theme-colour" content="red">
     <meta name ="robots" content="index,follow">
+    <meta name="viewport" href="width=device-width initial-scale=1">
     <link rel="stylesheet" href="css/myPortfolio.css">
     <link rel="stylesheet" href="css/mobileSize.css">
     <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
